--- a/recruitment-website/src/main/resources/static/css/job-detail.css
+++ b/recruitment-website/src/main/resources/static/css/job-detail.css
@@ -20,7 +20,7 @@ body {
 
 /* Header Styles */
 .header {
-  background-color: #0b2156;
+  background-color: #1a202c;
   color: #fff;
   padding: 10px 0;
 }
@@ -296,7 +296,7 @@ body {
 
 /* Footer Styles */
 .footer {
-  background-color: #0b2156;
+  background-color: #1A202C;
   color: #fff;
   padding: 40px 0 20px;
   margin-top: 40px;
