--- a/recruitment-website/src/main/resources/templates/account/login.html
+++ b/recruitment-website/src/main/resources/templates/account/login.html
@@ -15,6 +15,7 @@
         <button class="close-btn" onclick="closeModal()">×</button>
 
         <h2 class="modal-title">Đăng nhập để tiếp tục</h2>
+
         <!-- Form Quên Mật Khẩu -->
         <form id="forgotPasswordForm" style="display: none;">
             <div class="form-group">
@@ -28,15 +29,15 @@
         </form>
 
         <!-- Form Đăng Nhập -->
-        <form id="loginForm">
+      <form id="loginForm">
             <div class="social-buttons">
                 <button id="btnGoogleLogin" class="social-btn google-btn">với tài khoản Google</button>
-                <button id="btnFacebookLogin" class="social-btn facebook-btn">với tài khoản Facebook</button>
             </div>
 
             <div class="divider">
                 <span>hoặc đăng nhập bằng email</span>
             </div>
+
             <div class="form-group">
                 <label class="form-label">Email <span class="required">*</span></label>
                 <input id="email" type="email" class="form-input" required>
@@ -49,7 +50,7 @@
                     <button type="button" class="password-toggle" onclick="togglePassword()">👁</button>
                 </div>
                 <div class="forgot-password">
-                    <a id="forget-pwd-btn" href="#">Quên mật khẩu?</a>
+                    <a id="forget-pwd-btn" href="/forgotPassword">Quên mật khẩu?</a>
                 </div>
             </div>
 
