--- a/recruitment-website/src/main/resources/static/css/employee/application-profile.css
+++ b/recruitment-website/src/main/resources/static/css/employee/application-profile.css
@@ -264,10 +264,12 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 16px;
-  background: var(--gray-50);
+  background: var(--gray-100);
   border-radius: var(--border-radius);
   border-left: 4px solid var(--primary-blue);
   transition: var(--transition);
+  /* box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px; */
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
 
 .application-item:hover {
