employer: fix candidates

--- a/recruitment-website/src/main/resources/templates/employer/dashboard.html
+++ b/recruitment-website/src/main/resources/templates/employer/dashboard.html
@@ -57,6 +57,6 @@
         </div>
     </div>
     <script src="/js/employer/dashboard.js"></script>
-    <script src="/js/employer/header.js"></script>
+    <script type="module" src="/js/employer/header.js"></script>
 </body>
 </html>
