--- a/recruitment-website/src/main/resources/templates/employer/candidates.html
+++ b/recruitment-website/src/main/resources/templates/employer/candidates.html
@@ -23,10 +23,9 @@
                            id="candidate-filter" placeholder="Tìm kiếm theo tên, vị trí hoặc trạng thái">
                     <select id="status-filter" class="filter-status bg-gray-200 text-gray-700 text-sm rounded-full px-4 py-2 ml-2 outline-none focus:ring-2 focus:ring-primary-blue">
                         <option value="">Tất Cả Trạng Thái</option>
-                        <option value="pending">Chờ Xử Lý</option>
-                        <option value="interview">Phỏng Vấn</option>
-                        <option value="accepted">Được Nhận</option>
-                        <option value="rejected">Loại</option>
+                        <option value="PENDING">Chờ Xử Lý</option>
+                        <option value="APPROVED">Phỏng Vấn</option>
+                        <option value="REFUSED">Loại</option>
                     </select>
                 </div>
             </div>
